# automata

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  resource.rc  run.bat  test.lua
doc/: scripting.md
src/: action.c  action.h  config.c  config.h  fs.c  fs.h  keyboard.c  keyboard.h  keycode.h  log.c  log.h  lua_bridge.c  lua_bridge.h  main.c  mouse.c  mouse.h  process.c  process.h  types.h  ui.c  ui.h
